@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-24T08:19:29Z",
+  "timestamp" : "2022-06-24T16:20:55Z",
   "count_outdated" : 348,
   "uniques_outdated" : 199,
-  "count" : 375,
+  "count" : 374,
   "uniques" : 217,
   "clones" : [
     {
       "timestamp": "2022-06-10T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
