@@ -1,3 +1,10 @@
+2022-06-24T16:20:55Z:
+* notice: last 14d: unq all: 5 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 199 348 / 217 375
+* notice: next accum: outdated-unq outdated-all / unq all: 199 348 / 217 374
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-06-10]
+
 2022-06-24T08:19:29Z:
 * notice: last 14d: unq all: 5 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 199 348 / 216 374
